# loyalWingmen

./: .gitignore  README.markdown  learn2.py  project_structure.py  read-me.markdown  readme.markdown  requirements-windows.txt  setup.cfg  setup.py  temporary_application.py  tree.txt  tutorial for virtual env.rtf
apps/: env_interactive_app.py
apps/legacy/: baysian_optimizer_app.py  model_trainer2.py
apps/level0/: analyse-non-cuda.py  analyse.py  baysian_optimizer_app.py  baysian_optimizer_pid_app.py  description.markdown  interactive-level01-doscara.py  interactive.py  learn.py  load.py  pid_auto_tune.py  pid_test.py  result_with_lidar.prof  test_it.py  test_it_2.py
apps/level1/: analyse-non-cuda.py  analyse.py  baysian_optimizer_app.py  description.markdown  interactive.py  learn.py  load.py  result.prof  result_with_lidar.prof
apps/level2/: analyse-mac.py  analyse.py  interactive.py  learn-mac.py  learn.py  load.py  (+1 more)
envs/: BaseAviary.py  BaseEnv.py  BaseSingleAgentAviary.py  BaseSingleAgentAviarySimplified.py  TakeoffAviary.py
logs/: 0.monitor.csv  1.monitor.csv  2.monitor.csv  3.monitor.csv
loyal_wingmen/: __init__.py  app.py  setup.py
loyal_wingmen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
loyalwingmen/: __init__.py  app.py  output.xlsx  random_optimizer.py  requirements-mac.txt  requirements.txt  setup.py  test_random_optimizer.py  timings_0.json  timings_1.json  timings_2.json  timings_3.json  timings_4.json  timings_5.json  timings_6.json  windows-requirements.txt
loyalwingmen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+219 files in other folders)
